--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "fast-csv": "^4.1.3",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
+    "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "twilio": "^3.41.1"
   }
