--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "dependencies": {
     "@sendgrid/mail": "^6.5.5",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "fast-csv": "^4.1.3",
+    "fast-csv": "^4.3.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
-    "moment": "^2.24.0",
-    "mongodb": "^3.5.5",
+    "moment": "^2.27.0",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
-    "twilio": "^3.41.1"
+    "twilio": "^3.47.0"
   }
 }
