--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.0",
+    "express-session": "^1.17.1",
     "fast-csv": "^4.3.1",
     "fs": "0.0.1-security",
+    "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
+    "jwks-rsa": "^1.8.1",
     "moment": "^2.27.0",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.3",
     "twilio": "^3.47.0"
   }
 }
